--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </main>
       <footer>
         <hr>
-        <p class="text-center">Štěpán Wysoglad - IT2 2020&#169;</p>
+        <p class="text-center">&#169;Štěpán Wysoglad - IT2 2020</p>
       </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
