--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
           <h1>PišQwoRky</h1>
       </header>
       <main class="container text-center">
+        <p>Napiš velikost herního pole od 3 do 50</p>
+          <input id="number" type="number" name="square">
+          <button id="button" onclick="squares()">Submit</button>
           <h2 id="player"></h2>
-          <canvas id="canvas" width="700" height="700" style="border: 1px solid black;"></canvas>
+          <canvas id="canvas" width="600" height="600" style="border: 1px solid black;"></canvas>
       </main>
       <footer>
         <hr>
